[gd_scene load_steps=4 format=2]

[ext_resource path="res://track_one.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Race.gd" type="Script" id=2]
[ext_resource path="res://Sound/Racing.wav" type="AudioStream" id=3]

[node name="Race" type="Node2D"]
script = ExtResource( 2 )

[node name="TrackOne" parent="." instance=ExtResource( 1 )]

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="StartButton" type="Button" parent="."]
margin_left = 461.0
margin_top = 313.0
margin_right = 473.0
margin_bottom = 333.0
text = "Ready?"

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="prepare_race"]
[connection signal="timeout" from="StartTimer" to="." method="start_race"]
